# Slasher

./: .gitignore  README.md  TODO.md  pyproject.toml  slasher.bash
examples/: filter.py  plotter.py  top.py
slasher/: __init__.py  __main__.py  slasher.py  types.py
